# Course_rest_full_api

./: .env.teamplate  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  vvvv
.github/workflows/: ci.yml
config/: settings.py  urls.py
habits/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
