[project]
name = "course-rest-full-api"
version = "0.1.0"
description = ""
authors = [
    { name = "ilyap", email = "ilya.piltyay@mail.ru" }
]

readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
django = ">=5.2.4,<6.0.0"
dotenv = ">=0.9.9,<0.10.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
djangorestframework = ">=3.16.0,<4.0.0"
pillow = ">=11.3.0,<12.0.0"
redis = ">=6.2.0,<7.0.0"
ipython = ">=9.4.0,<10.0.0"
django-filter = ">=25.1,<26.0"
djangorestframework-simplejwt = ">=5.5.1,<6.0.0"
drf-yasg = ">=1.21.10,<2.0.0"
django-cors-headers = ">=4.7.0,<5.0.0"
requests = ">=2.32.5,<3.0.0"
stripe = ">=12.4.0,<13.0.0"
celery = ">=5.5.3,<6.0.0"
eventlet = ">=0.40.3,<0.41.0"
django-celery-beat = { version = ">=2.8.1,<3.0.0", markers = "python_version < '4.0'" }
django-timezone-field = { version = ">=5.0", markers = "python_version < '4.0'" }
flake8 = "^7.3.0"
black = "^25.9.0"
isort = "^6.1.0"
mypy = "^1.18.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-django = "^4.11.1"
pytest-cov = "^7.0.0"

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py
)
'''

[tool.isort]
line_length = 119

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"